cmake_minimum_required(VERSION 3.26)

message(STATUS "Building for Platform: '${CMAKE_GENERATOR_PLATFORM}'")
cmake_policy(SET CMP0091 NEW) # Required to avoid Conan toolchain error on Windows

set(PROJECT_NAME "ims_hw_server")

project(${PROJECT_NAME} LANGUAGES CXX)

# Use C++17 or later
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

# ------------------------------------------------------------
# Proto generation options
# ------------------------------------------------------------
option(GENERATE_PROTO_CPP     "Generate C++ protobuf/gRPC code" ON)
option(GENERATE_PROTO_CSHARP  "Generate C# protobuf/gRPC code" OFF)
option(GENERATE_PROTO_PYTHON  "Generate Python protobuf/gRPC code" OFF)
option(GENERATE_PROTO_GO      "Generate Go protobuf/gRPC code" OFF)
option(GENERATE_PROTO_JAVA    "Generate Java protobuf/gRPC code" OFF)

# --- Conan integration ------------------------------------------------------
if (MSVC)
   set(CONAN_TOOLCHAIN_FILE "${CMAKE_BINARY_DIR}/build/generators/conan_toolchain.cmake")
else()
   set(CONAN_TOOLCHAIN_FILE "${CMAKE_BINARY_DIR}/build/Release/generators/conan_toolchain.cmake")
endif()

message(STATUS "Conan toolchain at ${CONAN_TOOLCHAIN_FILE}")
include(${CONAN_TOOLCHAIN_FILE})

# --- Protocol Buffers + gRPC -------------------------------------------------

find_package(Protobuf REQUIRED)
if(Protobuf_FOUND)
  message(STATUS "Protobuf found: ${Protobuf_PROTOC_EXECUTABLE}")
endif()

find_package(gRPC CONFIG REQUIRED)

# Add Proto files
set(src_dir     ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(proto_dir  	${CMAKE_CURRENT_SOURCE_DIR}/protos)
include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/ims_hw_server.cmake)

set(PROTOBUF_OUT_DIR  ${CMAKE_CURRENT_SOURCE_DIR}/generated/pb)
set(GRPC_CPP_OUT_DIR  ${CMAKE_CURRENT_SOURCE_DIR}/generated/grpc-cpp)

# --- iMS C++ External Library ------------------------------------------------

set(IMS_LIB_SUBMODULE ext/ims-lib)

## iMS Dependencies generated by conan
##
## Check for LibXML2
##
find_package(LibXml2 2.9.9 REQUIRED)
if (LibXml2_FOUND)
    message("-- Including LibXml2")
    include_directories(${libxml2_INCLUDE_DIRS})
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${libxml2_DEFINITIONS}")
else()
    message("-- LibXml2 not Found")
endif()

##
## Get BOOST
##
find_package(Boost REQUIRED)


# --- Build iMS HW Server ------------------------------------------------

# Add iMS Library directly to this module
set(IMS_TARGET_NAME imsLibrary)
set(IMSLIB_BUILD_SHARED OFF)
add_subdirectory(${IMS_LIB_SUBMODULE})

add_executable(${PROJECT_NAME}
    ${ims_hw_server_src_files}
)

target_link_libraries(${PROJECT_NAME}
    PRIVATE
        proto_cpp
        ${IMS_TARGET_NAME}
        gRPC::grpc++
        protobuf::libprotobuf
)

target_include_directories(${PROJECT_NAME}
    PRIVATE
        ${src_dir}
        ${GRPC_CPP_OUT_DIR}
        ${CMAKE_CURRENT_SOURCE_DIR}/${IMS_LIB_SUBMODULE}/include
)

# Configure iMS Header Linkage
if (NOT ${IMSLIB_BUILD_SHARED})
    target_compile_definitions(${PROJECT_NAME} PRIVATE _STATIC_IMS)
endif()

# ------------------------------------------------------------
# Generate Protobuf + gRPC C++ sources (Required)
# ------------------------------------------------------------
if (GENERATE_PROTO_CPP)
    add_library(proto_cpp STATIC)

    protobuf_generate(
        TARGET proto_cpp
        LANGUAGE cpp
        IMPORT_DIRS ${proto_dir}
        PROTOS ${ims_hw_server_proto_files}
        PROTOC_OUT_DIR "${PROTOBUF_OUT_DIR}"
    )

    ## Generate GRPC files
    protobuf_generate(
        TARGET proto_cpp
        LANGUAGE grpc
        GENERATE_EXTENSIONS .grpc.pb.h .grpc.pb.cc
        IMPORT_DIRS ${proto_dir}
        PLUGIN protoc-gen-grpc=$<TARGET_FILE:gRPC::grpc_cpp_plugin>
        PROTOS ${ims_hw_server_proto_files}
        PROTOC_OUT_DIR "${GRPC_CPP_OUT_DIR}"
    )

    target_link_libraries(proto_cpp
        PUBLIC 
            protobuf::libprotobuf
            gRPC::grpc++
    )

    target_include_directories(proto_cpp
        PUBLIC
            ${PROTOBUF_OUT_DIR}
            ${GRPC_CPP_OUT_DIR}
            ${CMAKE_CURRENT_BINARY_DIR}
    )
endif()

# --- Generate C# API source files -------------------------------------------
if(GENERATE_PROTO_CSHARP)

    set(CSHARP_OUT_DIR ${CMAKE_BINARY_DIR}/generated/csharp)
    file(MAKE_DIRECTORY ${CSHARP_OUT_DIR})

    protobuf_generate(
        TARGET proto_csharp
        LANGUAGE csharp
        PROTOS ${ims_hw_server_proto_files}
        OUT_VAR CSHARP_SRCS
    )

    add_custom_command(
        OUTPUT ${CMAKE_BINARY_DIR}/csharp_stamp
        COMMAND protobuf::protoc
            --proto_path=${CMAKE_SOURCE_DIR}/protos
            --csharp_out=${CSHARP_OUT_DIR}
            --grpc_out=${CSHARP_OUT_DIR}
            --plugin=protoc-gen-grpc=$<TARGET_FILE:gRPC::grpc_csharp_plugin>
            ${ims_hw_server_proto_files}
        COMMAND ${CMAKE_COMMAND} -E touch ${CMAKE_BINARY_DIR}/csharp_stamp
        DEPENDS ${ims_hw_server_proto_files}
    )

    add_custom_target(proto_csharp ALL
        DEPENDS ${CMAKE_BINARY_DIR}/csharp_stamp
    )
endif()
