cmake_minimum_required(VERSION 3.26)

message(STATUS "Building for Platform: '${CMAKE_GENERATOR_PLATFORM}'")
cmake_policy(SET CMP0091 NEW) # Required to avoid Conan toolchain error on Windows

set(SERVER_NAME "ims_hw_server")
set(CLIENT_NAME "ims_test_client")

project("ims_hw_server" LANGUAGES CXX)

# Use C++17 or later
set(CMAKE_CXX_STANDARD 17)
set(CMAKE_POSITION_INDEPENDENT_CODE ON)

# ------------------------------------------------------------
# Build Options
# ------------------------------------------------------------
option(BUILD_HW_SERVER        "Build iMS H/W Server Application" ON)
option(BUILD_TEST_CLIENT      "Build H/W Test Client Program" OFF)

option(GENERATE_PROTO_CPP     "Generate C++ protobuf/gRPC code" ON)
option(GENERATE_PROTO_CSHARP  "Generate C# protobuf/gRPC code" OFF)
option(GENERATE_PROTO_PYTHON  "Generate Python protobuf/gRPC code" OFF)
option(GENERATE_PROTO_OBJC    "Generate Objective C protobuf/gRPC code" OFF)
option(GENERATE_PROTO_PHP     "Generate PHP protobuf/gRPC code" OFF)
option(GENERATE_PROTO_RUBY    "Generate Ruby protobuf/gRPC code" OFF)
option(GENERATE_PROTO_ALL     "Generate ALL protobuf/gRPC code" OFF)

if (${BUILD_HW_SERVER} OR ${BUILD_TEST_CLIENT})
    set(GENERATE_PROTO_CPP ON)
endif()

if (${GENERATE_PROTO_ALL})
    set(GENERATE_PROTO_CPP ON)
    set(GENERATE_PROTO_CSHARP ON)
    set(GENERATE_PROTO_PYTHON ON)
    set(GENERATE_PROTO_OBJC ON)
    set(GENERATE_PROTO_PHP ON)
    set(GENERATE_PROTO_RUBY ON)
endif()

# --- Conan integration ------------------------------------------------------
if (MSVC)
   set(CONAN_TOOLCHAIN_FILE "${CMAKE_BINARY_DIR}/build/generators/conan_toolchain.cmake")
else()
   set(CONAN_TOOLCHAIN_FILE "${CMAKE_BINARY_DIR}/build/Release/generators/conan_toolchain.cmake")
endif()

message(STATUS "Conan toolchain at ${CONAN_TOOLCHAIN_FILE}")
include(${CONAN_TOOLCHAIN_FILE})

# --- Protocol Buffers + gRPC -------------------------------------------------

find_package(Protobuf REQUIRED)
if(Protobuf_FOUND)
  message(STATUS "Protobuf found: ${Protobuf_PROTOC_EXECUTABLE}")
endif()

find_package(gRPC CONFIG REQUIRED)

# Add Proto files
set(src_dir     ${CMAKE_CURRENT_SOURCE_DIR}/src)
set(proto_dir  	${CMAKE_CURRENT_SOURCE_DIR}/protos)
include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/ims_hw_server.cmake)

set(GRPC_CPP_OUT_DIR  ${CMAKE_CURRENT_SOURCE_DIR}/generated/cpp)

# --- iMS C++ External Library ------------------------------------------------

set(IMS_LIB_SUBMODULE ext/ims-lib)

## iMS Dependencies generated by conan
##
## Check for LibXML2
##
find_package(LibXml2 2.9.9 REQUIRED)
if (LibXml2_FOUND)
    message("-- Including LibXml2")
    include_directories(${libxml2_INCLUDE_DIRS})
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${libxml2_DEFINITIONS}")
else()
    message("-- LibXml2 not Found")
endif()

##
## Get BOOST
##
find_package(Boost REQUIRED)


# --- Build iMS HW Server ------------------------------------------------

if (${BUILD_HW_SERVER} OR ${BUILD_TEST_CLIENT})
    # Add iMS Library directly to this module
    set(IMS_TARGET_NAME imsLibrary)
    set(IMSLIB_BUILD_SHARED OFF)
    add_subdirectory(${IMS_LIB_SUBMODULE})

    # Needed for static build.  This is fragile - there must be a better way! TODO
    set (IMSHW_RESOURCE_FILE "")
    if (MSVC AND NOT ${IMSLIB_BUILD_SHARED}) 
        set (IMSHW_RESOURCE_FILE "${CMAKE_BINARY_DIR}/${IMS_LIB_SUBMODULE}/${IMS_TARGET_NAME}.dir/${CMAKE_BUILD_TYPE}/imshw.res")
    endif()
endif()

if (${BUILD_HW_SERVER})

    add_executable(${SERVER_NAME}
        ${ims_hw_server_src_files}
    )

    target_link_libraries(${SERVER_NAME}
        PRIVATE
            proto_cpp
            ${IMS_TARGET_NAME}
            ${IMSHW_RESOURCE_FILE}
            gRPC::grpc++
            protobuf::libprotobuf
    )

    target_include_directories(${SERVER_NAME}
        PRIVATE
            ${src_dir}
            ${GRPC_CPP_OUT_DIR}
            ${CMAKE_CURRENT_SOURCE_DIR}/${IMS_LIB_SUBMODULE}/include
    )

    # Configure application Header Linkage
    if (NOT ${IMSLIB_BUILD_SHARED})
        target_compile_definitions(${SERVER_NAME} PRIVATE _STATIC_IMS)
    endif()
endif()

if (${BUILD_TEST_CLIENT})

    add_executable(${CLIENT_NAME}
        ${ims_test_client_src_files}
    )

    target_link_libraries(${CLIENT_NAME}
        PRIVATE
            proto_cpp
            ${IMS_TARGET_NAME}
            ${IMSHW_RESOURCE_FILE}
            gRPC::grpc++
            protobuf::libprotobuf
    )

    target_include_directories(${CLIENT_NAME}
        PRIVATE
            ${src_dir}
            ${GRPC_CPP_OUT_DIR}
            ${CMAKE_CURRENT_SOURCE_DIR}/${IMS_LIB_SUBMODULE}/include
    )

    # Configure application Header Linkage
    if (NOT ${IMSLIB_BUILD_SHARED})
        target_compile_definitions(${CLIENT_NAME} PRIVATE _STATIC_IMS)
    endif()
endif()

# ------------------------------------------------------------
# Generate Protobuf + gRPC C++ sources (Required)
# ------------------------------------------------------------
if (GENERATE_PROTO_CPP)
    add_library(proto_cpp STATIC)

    protobuf_generate(
        TARGET proto_cpp
        LANGUAGE cpp
        IMPORT_DIRS ${proto_dir}
        PROTOS ${ims_hw_server_proto_files}
        PROTOC_OUT_DIR "${GRPC_CPP_OUT_DIR}"
    )

    ## Generate GRPC files
    protobuf_generate(
        TARGET proto_cpp
        LANGUAGE grpc
        GENERATE_EXTENSIONS .grpc.pb.h .grpc.pb.cc
        IMPORT_DIRS ${proto_dir}
        PLUGIN protoc-gen-grpc=$<TARGET_FILE:gRPC::grpc_cpp_plugin>
        PROTOS ${ims_hw_server_proto_files}
        PROTOC_OUT_DIR "${GRPC_CPP_OUT_DIR}"
    )

    target_link_libraries(proto_cpp
        PUBLIC 
            protobuf::libprotobuf
            gRPC::grpc++
    )

    target_include_directories(proto_cpp
        PUBLIC
            ${GRPC_CPP_OUT_DIR}
            ${CMAKE_CURRENT_BINARY_DIR}
    )
endif()

# ------------------------------------------------------------
# Generate Protobuf + gRPC sources for optional languages
# ------------------------------------------------------------
include(${CMAKE_CURRENT_SOURCE_DIR}/cmake/ims_gen_protobuf.cmake)
